--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4"
+  },
+  "overrides": {
+    "framer": {
+      "framer-motion": "$framer-motion"
+    }
   }
 }
