--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "overrides": {
     "framer": {
+      "react": "$react",
+      "react-dom": "$react-dom",
       "framer-motion": "$framer-motion"
     }
   }
